--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -20,6 +20,7 @@
         app:layout_constraintVertical_bias=".1"
         />
     <TextView
+        android:id="@+id/currentTime"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
@@ -41,6 +42,7 @@
         android:layout_marginTop='8sp'
         />
     <TextView
+        android:id="@+id/currentAccel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="18sp"
