--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -55,7 +56,7 @@
         android:id="@+id/textView5"
         app:layout_constraintLeft_toLeftOf="@id/textView1"
         app:layout_constraintTop_toBottomOf="@id/currentAccel"
-        android:text="Average Interval:"
+        android:text="Average Interval (ms):"
         android:textSize="18sp"
         android:layout_marginTop='8dp'
         />
@@ -88,7 +89,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/hourText"
         android:layout_marginLeft="12dp"
-        android:inputType="phone"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@id/textView3"
         app:layout_constraintBaseline_toBaselineOf="@id/textView3"/>
 
@@ -97,7 +98,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/minuteText"
         android:layout_marginLeft="12dp"
-        android:inputType="phone"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@id/hourText"
         app:layout_constraintTop_toTopOf="@id/hourText"/>
     <EditText
@@ -105,7 +106,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/secText"
         android:layout_marginLeft="12dp"
-        android:inputType="phone"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@id/minuteText"
         app:layout_constraintTop_toTopOf="@id/minuteText"/>
     <EditText
@@ -113,7 +114,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/millisecText"
         android:layout_marginLeft="12dp"
-        android:inputType="phone"
+        android:inputType="number"
         app:layout_constraintStart_toEndOf="@id/secText"
         app:layout_constraintBottom_toBottomOf="@id/secText"/>
 
@@ -121,7 +122,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/textView4"
-        android:textSize="18sp"
+        android:textSize="16sp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintHorizontal_bias=".1"
@@ -131,18 +132,37 @@
         android:layout_marginTop="12dp"
         android:textStyle='italic'/>
 
-    <android.support.v7.widget.AppCompatButton
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button1"
-        android:text="Schedule logging"
+        android:id="@+id/textview6"
+        android:textSize="18sp"
+        app:layout_constraintLeft_toLeftOf="@id/textView3"
+        app:layout_constraintTop_toBottomOf="@id/textView4"
+        android:layout_marginTop="12dp"
+        android:text="with sampling interval (ms): \n (enter 0 to sample fatest possible)"/>
+
+    <EditText
+        android:layout_width="40dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/interval"
+        app:layout_constraintBaseline_toBaselineOf="@id/textview6"
+        app:layout_constraintLeft_toLeftOf="@id/secText"
+        android:inputType="number"/>
+
+    <android.support.v7.widget.SwitchCompat
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/switch1"
+        android:text="Toggle to schedule"
         android:textSize="18sp"
         app:layout_constraintRight_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
         app:layout_constraintHorizontal_bias=".5"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintVertical_bias=".7"
+        app:layout_constraintVertical_bias=".75"
+        android:checked="false"
         android:layout_marginTop="6dp"/>
 
 </android.support.constraint.ConstraintLayout>
