--- a/main/res/layout/activity_main.xml
+++ b/main/res/layout/activity_main.xml
@@ -140,7 +140,7 @@
         app:layout_constraintLeft_toLeftOf="@id/textView3"
         app:layout_constraintTop_toBottomOf="@id/textView4"
         android:layout_marginTop="12dp"
-        android:text="with sampling interval (ms): \n (enter 0 to sample fatest possible)"/>
+        android:text="with sampling interval (ms): \n (enter 0 to sample fastest possible)"/>
 
     <EditText
         android:layout_width="80dp"
